--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,12 @@
         android:layout_column="0"
         android:text="@string/temperature" />
 
+    <ToggleButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="1"
+        android:layout_column="1"
+        android:textOn="@string/hot"
+        android:textOff="@string/cold"/>
+
 </GridLayout>
